--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
-* SRFI 185: Linear adjustable-size strings
+* SRFI 185: Linear adjustable-length strings
 
 ** by John Cowan
 
 
 
-This repository hosts [[https://srfi.schemers.org/srfi-185/][SRFI 185]]: Linear adjustable-size strings, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
+This repository hosts [[https://srfi.schemers.org/srfi-185/][SRFI 185]]: Linear adjustable-length strings, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
 This SRFI is in /draft/ status.
 
